# remove_docker_images

./: .gitignore  Cargo.toml  README.md  update-readme.sh
.github/workflows/: build.yml  release-build.yml
src/: arg.rs  docker_registry_type.rs  image.rs  image_registry.rs  main.rs  version.rs
