[package]
name = "remove_docker_images"
version = "0.2.1-beta.2"
authors = ["Shisei Hanai <ruimo.uno@gmail.com>"]
edition = "2018"
description = "Remove obsolete docker images."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.31.2"
regex = "1"
